Fixed padding issue on mobile

--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -11,8 +11,7 @@
     max-width: calc(100% - 20px);
   }
   .container {
-    width: calc(100vw - 30px);
-    padding: 15px;
+    width: 100vw;
 
     .content-wrapper {
       .devo-detail-wrapper {
